Improvements:
- Bug fix for a missing comma on 1d shape